NIC-942: implement auth flow (#13)
* NIC-942: implement auth flow

* NIC-942: update swagger docs
